Limited title overlay length to 133 characters to prevent overflow on extra long titles. Reduced line height on mobile views by 3px. Matched img and .photo-container widths to avoid undesired cropping.

--- a/css/flickrAPIStyles.css
+++ b/css/flickrAPIStyles.css
@@ -66,7 +66,7 @@ h2 {
 .title_overlay p {
     font-family: 'Lobster', Helvetica, Arial, sans-serif;
     font-size: calc(1vw + 4vh + 2vmin);
-    line-height: 50px;
+    line-height: 47px;
 }
 
 .top-jump {
@@ -97,7 +97,7 @@ h2 {
 }
 
 img {
-  width: 100vw;
+  width: 90vw;
 }
 
 /* Page elements -------------------- */
@@ -135,7 +135,7 @@ img {
 
 @media (min-width: 728px) {
    img {
-    width: 60vw;
+    width: 50vw;
   }
 
   .photo-container {
